<resources>
    <string name="app_name">Shoe Store</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_next">Next</string>
    <string name="login_create_account">Create account</string>

    <string name="welcome_title">Welcome to Shoe Store!</string>
    <string name="welcome_go_to_instructions">Please review the instructions below before you start using the app!</string>
    <string name="welcome_button_text">Go to instructions</string>

    <string name="instructions_button_text">Access the shoes options!</string>
    <string name="instructions_save_text">To save a new shoe, provide the informations and click on Save.</string>
    <string name="instructions_cancel_text">To cancel, just click on Cancel.</string>

    <string name="shoe_list_add_a_new_shoe">Add a new shoe</string>
    <string name="logout_menu_item">Logout</string>

    <string name="shoe_name_hint">Shoe Name</string>
    <string name="company_hint">Company</string>
    <string name="shoe_size_hint">Shoe Size</string>
    <string name="description_hint">Description</string>
    <string name="shoe_save">Save</string>
    <string name="shoe_cancel">Cancel</string>

    <string name="shoe_name">Shoe Name</string>
    <string name="company_name">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
</resources>
