<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="welcomeModel"
            type="com.udacity.shoestore.screens.welcome.WelcomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_margin_default"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_welcome_label"
            android:text="@string/welcome_title"
            style="@style/TitleStyle"
            tools:text="@string/welcome_title" />

        <TextView
            android:id="@+id/text_view_welcome_go_to_instructions"
            android:text="@string/welcome_go_to_instructions"
            style="@style/TextViewStyle"
            tools:text="@string/welcome_go_to_instructions" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_instructions"
            style="@style/ButtonStyle"
            android:text="@string/welcome_button_text"
            android:onClick="@{() -> welcomeModel.onGoToInstructionsClick()}"/>

    </LinearLayout>

</layout>