<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="@dimen/layout_margin_default"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/app_name"
            android:textAllCaps="true"
            style="@style/AppTitleStyle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_email"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/login_username_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                style="@style/TextInputStyle"
                android:autofillHints="@string/login_username_hint"
                android:inputType="textEmailAddress"
                tools:text="@string/login_username_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_password"
            style="@style/TextInputLayoutStyle"
            android:layout_marginBottom="@dimen/layout_margin_large"
            android:hint="@string/login_password_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/TextInputStyle"
                android:autofillHints="Type your password"
                android:inputType="textPassword"
                tools:text="@string/login_password_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                style="@style/ButtonStyle"
                android:text="@string/login_next" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_account_button"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/next_button"
                android:layout_toLeftOf="@id/next_button"
                android:text="@string/login_create_account" />

        </RelativeLayout>

    </LinearLayout>

</layout>